# novel_hub

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .sample.env  404.html  AGENTS.md  CLAUDE.md  CRAWL.md  Dockerfile  LICENSE  Makefile  OTHER.txt  README.md  app.py  data_import.py  database.db  db.py  dev.py  docker-compose.yml  enums.py  index.html  ingest.py  main.py  meta.jsonl  models.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pwd.txt  pyproject.toml  reset_db.py  site_config.toml
about/: index.html
authors/: index.html  page10.html  page2.html  page3.html  page4.html  page5.html  page6.html  page7.html  page8.html  page9.html
banners/: index.html  page10.html  page11.html  page12.html  page13.html  page14.html  page15.html  page16.html  page17.html  page18.html  page19.html  page2.html  page20.html  page21.html  page22.html  page23.html  page24.html  page25.html  page26.html  page27.html  page28.html  page29.html  page3.html  page30.html  page31.html  page32.html  page33.html  page34.html  page35.html  page36.html  page37.html  page38.html  page39.html  page4.html  page40.html  page41.html  page42.html  page43.html  page44.html  page45.html  (+16 more)
comments/: index.html
dashboard/: index.html
database/: __init__.py  app.py  cleaner.py  cloud.py  database.py  engine.py  enums.py  mappings.py  models.py  writer.py
docs/: commands.md  deployment.md  meta_spider.md  snapshot-plan.md  utils.md  website.md
etl/: __init__.py  cloud.py  cloud_with_text.py  common.py  loader.py  local_db.py  pipeline.py  transform.py
feeder/: __init__.py  preprocesser.py  utils.py
logs/: LOG_2026-05-16.txt  LOG_2026-05-17.txt
meta_spider/: README.md  items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
old/: cleaner.py  cloud.py  ingest.py  reset_db.py  writer.py
output/: meta.jsonl  meta_03.jsonl  meta_04.jsonl  meta_05.jsonl  meta_06.jsonl  meta_07.jsonl  meta_08.jsonl  meta_09.jsonl  meta_10.jsonl  meta_11.jsonl  meta_12.jsonl  (+11 more)
(+323 files in other folders)
