[project]
name = "novel_hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scrapy>=2.15.2",
    "sqlmodel>=0.0.38",
]

[tool.black]
line-length = 79
target-version = ["py313"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
    "flake8>=7.3.0",
]
