[project]
name = "novel_hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "jinja2>=3.1.6",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scrapy>=2.15.2",
    "sqlmodel>=0.0.38",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F401", "F403", "E741", "E501", "W291"]