[project]
name = "novel_hub"
version = "1.5.0"
description = "Novel Hub — Django novel metadata website from sfacg.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scrapy>=2.15.2",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "faker>=40.21.0",
    "flake8>=7.3.0",
    "playwright>=1.52.0",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F401", "F403", "E741", "E501", "W291"]
